# Rustick

./: Cargo.toml  LICENSE  README.md
.claude/skills/build-rustick/: SKILL.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/event/: handler.rs  mod.rs  scheduler.rs
src/model/: filter.rs  mod.rs  reminder.rs  task.rs
src/store/: mod.rs
src/ui/: mod.rs  popup.rs  search.rs  task_input.rs  task_list.rs  timeline.rs  upcoming.rs
tests/: integration_test.rs
