[package]
name = "rustick"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
nucleo = "0.5"
thiserror = "2"
directories = "6"
rusqlite = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
